[gd_scene load_steps=6 format=2]

[ext_resource path="res://weapons/Bullet.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/kenney_topdowntanksredux/Spritesheet/onlyObjects_default.png" type="Texture" id=2]
[ext_resource path="res://weapons/Weapon.gd" type="Script" id=3]
[ext_resource path="res://Assets/topdown-shooter/weapon_silencer.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "muzzle_flash"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Muzzle:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Muzzle:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 1.2 ) ]
}

[node name="Weapon" type="Node2D"]
script = ExtResource( 3 )
Bullet = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )
region_rect = Rect2( 194, 113, 19, 10 )

[node name="EndofGun" type="Position2D" parent="."]
position = Vector2( 16, 0 )

[node name="GunDirection" type="Position2D" parent="."]
position = Vector2( 36, 0 )

[node name="AttackColdown" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Muzzle" type="Sprite" parent="."]
visible = false
position = Vector2( 28, 0 )
rotation = -1.5708
scale = Vector2( 0.5, 1.2 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 324, 334, 20, 25 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/muzzle_flash = SubResource( 1 )
